ACLOCAL_AMFLAGS = -I config

SUBDIRS = src doc addons

DIST_SUBDIRS = src doc addons

EXTRA_DIST = \
	builds/android/Android.mk \
	builds/android/Application.mk \
	builds/android/build.sh \
	builds/android/clean.sh \
	builds/mingw32/Makefile.mingw32 \
	builds/mingw32/platform.h \
	builds/msvc/drops11.sln \
	builds/msvc/drops_selftest.vcproj \
	builds/msvc/drops_selftest.vcxproj \
	builds/msvc/drops_selftest.vcxproj.filters \
	builds/msvc/drops.sln \
	builds/msvc/drops.vcproj \
	builds/msvc/drops.vcxproj \
	builds/msvc/drops.vcxproj.filters \
	builds/msvc/README.txt \
        builds/msvc/platform.h
